--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": ">=7.0.0",
         "barryvdh/laravel-ide-helper": "^2.5",
+        "corcel/acf": "^1.1",
         "fideloper/proxy": "~3.3",
         "jgrossi/corcel": "2.5.*",
         "laravel/framework": "5.5.*",
@@ -23,6 +24,9 @@
         "symfony/thanks": "^1.0"
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
