--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/css/app.css": "/css/app.css?id=4a05d12b69628c58b055",
+    "/css/app.css": "/css/app.css?id=a14a5d658091952d16d7",
+    "/vendor/particle.js/particles.min.js": "/vendor/particle.js/particles.min.js?id=00debcf6cf0789a19cee",
     "/js/scripts.js": "/js/scripts.js?id=997526ae2cf3b9e4e799"
 }
