--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "fullcalendar": "^3.9.0",
     "moment": "^2.22.2",
-    "fullpage.js": "fullpage#^3.0.3"
+    "fullpage.js": "fullpage#^3.0.3",
+    "particles.js": "^2.0.0"
   }
 }
